--- a/Clone_Coding/Ellie_Web/index.html
+++ b/Clone_Coding/Ellie_Web/index.html
@@ -31,7 +31,7 @@
         <a href="#" class="navbar__logo__name">Ellie</a>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item">Home</li>
+        <li class="navbar__menu__item active">Home</li>
         <li class="navbar__menu__item">About</li>
         <li class="navbar__menu__item">Skills</li>
         <li class="navbar__menu__item">My work</li>
@@ -56,7 +56,7 @@
       <button class="home__contact">CONTACT ME</button>
     </section>
 
-    <section id="about">
+    <section id="about" class="section__container">
       <h1>About me</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odit
@@ -69,7 +69,7 @@
           <div class="major__icon">
             <i class="fab fa-html5"></i>
           </div>
-          <div class="major__title">Front-end</div>
+          <h2 class="major__title">Front-end</h2>
           <div class="major__description">
             HTML, CSS, JavaScript, TypeScript<br />React, Vue, Web APIs
           </div>
@@ -78,7 +78,7 @@
           <div class="major__icon">
             <i class="fas fa-mobile"></i>
           </div>
-          <div class="major__title">Mobile</div>
+          <h2 class="major__title">Mobile</h2>
           <div class="major__description">
             Android, iOS, React Native, Flutter, <br />
             Java, Swift, Kotlin
@@ -88,7 +88,7 @@
           <div class="major__icon">
             <i class="fas fa-server"></i>
           </div>
-          <div class="major__title">Back-end</div>
+          <h2 class="major__title">Back-end</h2>
           <div class="major__description">
             Java, JavaScript, Go, NodeJS, <br />
             Rest APIs, GraphGL
@@ -98,10 +98,12 @@
       <div class="about__jobs">
         <div class="job">
           <img src="./imgs/job/samsung.png" alt="Samsung" class="job__logo" />
-          <p class="job__name">
-            Currently working at Samsung as Software Engineer
-          </p>
-          <p class="job__period">2019 Sep - Until now</p>
+          <div class="job__description">
+            <p class="job__name">
+              Currently working at Samsung as Software Engineer
+            </p>
+            <p class="job__period">2019 Sep - Until now</p>
+          </div>
         </div>
         <div class="job">
           <img
@@ -109,109 +111,113 @@
             alt="Samsung"
             class="about__job__logo"
           />
-          <p class="about__job__company">
-            Currently working at Samsung as Software Engineer
-          </p>
-          <p class="about__job__period">2019 Sep - Until now</p>
+          <div class="job__description">
+            <p class="job__name">
+              Currently working at Samsung as Software Engineer
+            </p>
+            <p class="job__period">2019 Sep - Until now</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="skills">
-      <h1>Skills</h1>
-      <h2>Skills & Attribures</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-        dolor quia provident? A rem voluptas soluta officia exercitationem odit
-        inventore harum voluptatibus, reprehenderit possimus id similique
-        aliquam. Obcaecati, illum porro?
-      </p>
-      <div class="skillset">
-        <div class="skillset__left">
-          <h3 class="skillset__title">Skills</h3>
-          <div class="skill">
-            <div class="skill__description">
-              <span>HTML</span>
-              <span>90%</span>
+      <div class="section__container">
+        <h1>Skills</h1>
+        <h2>Skills & Attribures</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+          dolor quia provident? A rem voluptas soluta officia exercitationem
+          odit inventore harum voluptatibus, reprehenderit possimus id similique
+          aliquam. Obcaecati, illum porro?
+        </p>
+        <div class="skillset">
+          <div class="skillset__left">
+            <h3 class="skillset__title">Skills</h3>
+            <div class="skill">
+              <div class="skill__description">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 90%;"></div>
+              </div>
             </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>95%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 95%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>JavaScript</span>
+                <span>60%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 60%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>TypeScript</span>
+                <span>90%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 90%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>React</span>
+                <span>99%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 99%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>NodeJS</span>
+                <span>80%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 80%;"></div>
+              </div>
             </div>
           </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>CSS</span>
-              <span>95%</span>
+          <div class="skillset__right">
+            <div class="tools">
+              <h3 class="skillset__title">Tools</h3>
+              <ul class="tools__list">
+                <li><span>Visual Studio Code</span></li>
+                <li><span>IntelliJ</span></li>
+                <li><span>Android Studio code</span></li>
+                <li><span>iOS development tools</span></li>
+                <li><span>Sketch app</span></li>
+              </ul>
             </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
+            <div class="etc">
+              <h3 class="skillset__title">Etc</h3>
+              <ul class="etc__list">
+                <li><span>Git</span></li>
+                <li><span>Scrum master</span></li>
+                <li><span>Math</span></li>
+              </ul>
             </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>JavaScript</span>
-              <span>60%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>TypeScript</span>
-              <span>90%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>React</span>
-              <span>99%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>NodeJS</span>
-              <span>80%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-        </div>
-        <div class="skillset__right">
-          <div class="tools">
-            <h3 class="skillset__title">Tools</h3>
-            <ul class="tools__list">
-              <li><span>Visual Studio Code</span></li>
-              <li><span>IntelliJ</span></li>
-              <li><span>Android Studio code</span></li>
-              <li><span>iOS development tools</span></li>
-              <li><span>Sketch app</span></li>
-            </ul>
-          </div>
-          <div class="etc">
-            <h3 class="skillset__title">Etc</h3>
-            <ul class="etc__list">
-              <li><span>Git</span></li>
-              <li><span>Scrum master</span></li>
-              <li><span>Math</span></li>
-            </ul>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="work">
+    <section id="work" class="section__container">
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn">
+        <button class="category__btn active">
           All<span class="category__count">8</span>
         </button>
         <button class="category__btn">
@@ -284,7 +290,7 @@
       </div>
     </section>
 
-    <section id="testimonials">
+    <section id="testimonials" class="section__container">
       <h1>Testimonials</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
@@ -327,7 +333,7 @@
       </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="section__container">
       <h1 class="contace__title">Let's talk</h1>
       <h3 class="contact__email">dream@gmail.com</h3>
       <div class="contact__links">
