--- a/Clone_Coding/Ellie_Web/index.html
+++ b/Clone_Coding/Ellie_Web/index.html
@@ -230,58 +230,59 @@
           Mobile<span class="category__count">8</span>
         </button>
       </div>
+
       <div class="work__projects">
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project1.png" alt="" class="project__img" />
+          <img src="./imgs/projects/1.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project2.png" alt="" class="project__img" />
+          <img src="./imgs/projects/2.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project3.png" alt="" class="project__img" />
+          <img src="./imgs/projects/3.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project4.png" alt="" class="project__img" />
+          <img src="./imgs/projects/4.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project5.png" alt="" class="project__img" />
+          <img src="./imgs/projects/5.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project6.png" alt="" class="project__img" />
+          <img src="./imgs/projects/6.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project7.png" alt="" class="project__img" />
+          <img src="./imgs/projects/7.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
         <a href="#" target="_blank" class="project">
-          <img src="./imgs/projects/project8.png" alt="" class="project__img" />
+          <img src="./imgs/projects/8.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
@@ -290,61 +291,67 @@
       </div>
     </section>
 
-    <section id="testimonials" class="section__container">
-      <h1>Testimonials</h1>
-      <h3>See what they say about me</h3>
-      <div class="testimonials">
-        <div class="testimonial">
-          <img
-            src="./imgs/testimonials/people.jpeg"
-            alt=""
-            class="testimonial__avatar"
-          />
-          <div class="testimonial__speech-bubble">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odit
-              eos repellat incidunt, accusantium blanditiis laudantium placeat
-              nihil, provident molestias voluptatibus perspiciatis. Cupiditate
-              aspernatur consectetur doloribus, adipisci reiciendis similique
-              maxime?
-            </p>
-            <p class="name">
-              <a href="#" target="_blank">Steve Jobs</a> / Apple
-            </p>
+    <section id="testimonials">
+      <div class="section__container">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+          <div class="testimonial">
+            <img
+              src="./imgs/testimonials/people.jpeg"
+              alt=""
+              class="testimonial__avatar"
+            />
+            <div class="testimonial__speech-bubble">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odit
+                eos repellat incidunt, accusantium blanditiis laudantium placeat
+                nihil, provident molestias voluptatibus perspiciatis. Cupiditate
+                aspernatur consectetur doloribus, adipisci reiciendis similique
+                maxime?
+              </p>
+              <p class="name">
+                <a href="#" target="_blank">Steve Jobs</a> / Apple
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="testimonial">
-          <img
-            src="./imgs/testimonials/people.jpeg"
-            alt=""
-            class="testimonial__avatar"
-          />
-          <div class="testimonial__speech-bubble">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odit
-              eos repellat incidunt, accusantium blanditiis laudantium placeat
-              nihil, provident molestias voluptatibus perspiciatis. Cupiditate
-              aspernatur consectetur doloribus, adipisci reiciendis similique
-              maxime?
-            </p>
-            <p class="name"><a href="#" target="_blank">Mark</a> / Facebook</p>
+          <div class="testimonial">
+            <div class="testimonial__speech-bubble">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odit
+                eos repellat incidunt, accusantium blanditiis laudantium placeat
+                nihil, provident molestias voluptatibus perspiciatis. Cupiditate
+                aspernatur consectetur doloribus, adipisci reiciendis similique
+                maxime?
+              </p>
+              <p class="name">
+                <a href="#" target="_blank">Mark</a> / Facebook
+              </p>
+            </div>
+            <img
+              src="./imgs/testimonials/people.jpeg"
+              alt=""
+              class="testimonial__avatar"
+            />
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contact" class="section__container">
-      <h1 class="contace__title">Let's talk</h1>
-      <h3 class="contact__email">dream@gmail.com</h3>
-      <div class="contact__links">
-        <a href="#" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="#" target="_blank">
-          <i class="fab fa-linkedin"></i>
-        </a>
+    <section id="contact">
+      <div class="section__container">
+        <h1 class="contace__title">Let's talk</h1>
+        <h2 class="contact__email">dream@gmail.com</h2>
+        <div class="contact__links">
+          <a href="#" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="#" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
+        <p class="contact__rights">2020 Dream Coding. All rights reserved</p>
       </div>
-      <p class="contact__rights">2020 Dream Coding. All rights reserved</p>
     </section>
   </body>
 </html>
