--- a/Clone_Coding/Ellie_Web/index.html
+++ b/Clone_Coding/Ellie_Web/index.html
@@ -31,29 +31,36 @@
         <a href="#" class="navbar__logo__name">Ellie</a>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item active">Home</li>
-        <li class="navbar__menu__item">About</li>
-        <li class="navbar__menu__item">Skills</li>
-        <li class="navbar__menu__item">My work</li>
-        <li class="navbar__menu__item">Testimonial</li>
-        <li class="navbar__menu__item">Contact</li>
+        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">My work</li>
+        <li class="navbar__menu__item" data-link="#testimonials">
+          Testimonial
+        </li>
+        <li class="navbar__menu__item contact" data-link="#contact">Contact</li>
       </ul>
+      <button class="navbar__toggle-btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
 
     <section id="home">
-      <img
-        src="./imgs/home/profile.jpg"
-        alt="Ellie's profile photo"
-        class="home__avatar"
-      />
-      <h1 class="home__title">
-        Hello, <br />
-        I'm Dream Coder
-      </h1>
-      <h2 class="home__description">
-        A software Engineer currently residing in Sydney, Australia
-      </h2>
-      <button class="home__contact">CONTACT ME</button>
+      <div class="home__container">
+        <img
+          src="./imgs/home/profile.jpg"
+          alt="Ellie's profile photo"
+          class="home__avatar"
+        />
+        <h1 class="home__title">
+          Hello, <br />
+          I'm Dream Coder
+        </h1>
+        <h2 class="home__description">
+          A software Engineer currently residing in Sydney, Australia
+        </h2>
+        <button class="home__contact">CONTACT ME</button>
+      </div>
     </section>
 
     <section id="about" class="section__container">
@@ -230,7 +237,6 @@
           Mobile<span class="category__count">8</span>
         </button>
       </div>
-
       <div class="work__projects">
         <a href="#" target="_blank" class="project">
           <img src="./imgs/projects/1.png" alt="" class="project__img" />
