--- a/Clone_Coding/Ellie_Web/index.html
+++ b/Clone_Coding/Ellie_Web/index.html
@@ -224,70 +224,70 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn active">
+        <button class="category__btn active" data-filter="*">
           All<span class="category__count">8</span>
         </button>
-        <button class="category__btn">
-          Front-end<span class="category__count">8</span>
+        <button class="category__btn" data-filter="front-end">
+          Front-end<span class="category__count">3</span>
         </button>
-        <button class="category__btn">
-          Back-end<span class="category__count">8</span>
+        <button class="category__btn" data-filter="back-end">
+          Back-end<span class="category__count">3</span>
         </button>
-        <button class="category__btn">
-          Mobile<span class="category__count">8</span>
+        <button class="category__btn" data-filter="mobil">
+          Mobile<span class="category__count">2</span>
         </button>
       </div>
       <div class="work__projects">
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="front-end">
           <img src="./imgs/projects/1.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="front-end">
           <img src="./imgs/projects/2.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="front-end">
           <img src="./imgs/projects/3.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="back-end">
           <img src="./imgs/projects/4.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="back-end">
           <img src="./imgs/projects/5.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="back-end">
           <img src="./imgs/projects/6.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="mobil">
           <img src="./imgs/projects/7.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
             <span>Colone Coding Project</span>
           </div>
         </a>
-        <a href="#" target="_blank" class="project">
+        <a href="#" target="_blank" class="project" data-type="mobil">
           <img src="./imgs/projects/8.png" alt="" class="project__img" />
           <div class="project__description">
             <h3>YouTube</h3>
@@ -359,5 +359,9 @@
         <p class="contact__rights">2020 Dream Coding. All rights reserved</p>
       </div>
     </section>
+
+    <button class="arrow-up">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </body>
 </html>
