--- a/Python/Tic_Tac_Toe/Tic-Tac-Toe/First move_/task.html
+++ b/Python/Tic_Tac_Toe/Tic-Tac-Toe/First move_/task.html
@@ -1,4 +1,4 @@
-<h2 style="text-align: center;">Description</h2>
+<h5 style="text-align: center;">Description</h5>
 
 <p>It’s time to make our game interactive! Now we’re going to add the ability for a user to make a move.</p>
 
@@ -12,11 +12,11 @@
 
 <p>The program should ask the user to enter the coordinates of the cell where they want to make a move.</p>
 
-<p>In this stage, the user plays as X, not O. Keep in mind that the first coordinate goes from left to right and the second coordinate goes from top to bottom. Also note that coordinates start with 1 and can be 1, 2, or 3.</p>
+<p>In this stage, the user plays as X, not O. Keep in mind that the first coordinate goes from top to bottom and the second coordinate goes from left to right. Also note that coordinates start with 1 and can be 1, 2, or 3.</p>
 
 <p>What happens if the user enters incorrect coordinates? The user could enter symbols instead of numbers, or enter coordinates representing occupied cells or cells that aren’t even on the grid. You need to check the user's input and catch possible exceptions.</p>
 
-<h2 style="text-align: center;">Objectives</h2>
+<h5 style="text-align: center;">Objectives</h5>
 
 <p>The program should work as follows:</p>
 
@@ -40,7 +40,7 @@
 
 <p><div class="alert alert-warning">The project was changed. Now the coordinates start from the upper left corner. Look closely at the examples.</div></p>
 
-<h2 style="text-align: center;">Examples</h2>
+<h5 style="text-align: center;">Examples</h5>
 
 <p>The examples below show how your program should work. </p>
 
