--- a/Python/Tic_Tac_Toe/Topics/Basic string methods/Theory/task.html
+++ b/Python/Tic_Tac_Toe/Topics/Basic string methods/Theory/task.html
@@ -1,3 +1,4 @@
+<h2>Basic string methods</h2>
 <html>
  <head></head>
  <body>
@@ -11,17 +12,17 @@
    <strong>assign the same name</strong> to the copy. So, what to do with the output of the methods depends on whether you are going to use the original string or its copy later.
   </div>
   <p></p> 
-  <h2 style="text-align: center;">"Changing" a string</h2> 
+  <h5 style="text-align: center;" id="changing-a-string">"Changing" a string</h5> 
   <p>The first group of string methods consists of the ones that "change" the string in a specific way, that is they return the copy with some changes made.</p> 
   <p>The syntax for calling a method is as follows: a string is given first (or the name of a variable that holds a string), then comes a period followed by the method name and parentheses in which arguments are listed.</p> 
   <p>Here’s a list of common string methods of that kind:</p> 
   <ul> 
    <li><strong><code class="language-python">str.replace(old, new, count)</code></strong> replaces all occurrences of the <code class="language-python">old</code> string with the <code class="language-python">new</code> one. The <code class="language-python">count</code> parameter is optional, and if specified, only the first <code class="language-python">count</code> occurrences are replaced in the given string.</li> 
-   <li> <p><strong><code class="language-python">str.upper()</code></strong> converts all characters of the string to the upper case.</p> </li> 
-   <li> <p><strong><code class="language-python">str.lower()</code></strong> converts all characters of the string to the lower case.</p> </li> 
+   <li> <p><strong><code class="language-python">str.upper()</code></strong> converts all characters of the string to upper case.</p> </li> 
+   <li> <p><strong><code class="language-python">str.lower()</code></strong> converts all characters of the string to lower case.</p> </li> 
    <li> <p><strong><code class="language-python">str.title()</code></strong> converts the first character of each word to upper case.</p> </li> 
    <li> <p><strong><code class="language-python">str.swapcase()</code></strong> converts upper case to lower case and vice versa.</p> </li> 
-   <li> <p><strong><code class="language-python">str.capitalize()</code></strong> changes the first character of the string to the title case and the rest to the lower case.</p> </li> 
+   <li> <p><strong><code class="language-python">str.capitalize()</code></strong> changes the first character of the string to upper case and the rest to lower case.</p> </li> 
   </ul> 
   <p>And here's an example of how these methods are used (note that we don't save the result of every method):</p> 
   <pre><code class="language-python">message = "bonjour and welcome to Paris!"
@@ -31,7 +32,8 @@ print(message.upper())  # BONJOUR AND WELCOME TO PARIS!
 print(message)  # bonjour and welcome to Paris!
 
 title_message = message.title() 
-# `title_message` contains a new string with all words capitalized
+# `title_message` contains a new string 
+# with the first character of each word capitalized
 print(title_message)  # Bonjour And Welcome To Paris!
 
 print(message.replace("Paris", "Lyon"))  # bonjour and welcome to Lyon!
@@ -40,8 +42,8 @@ print(replaced_message)  # b!nj!ur and welcome to Paris!
 
 # again, the source string is unchanged, only its copy is modified
 print(message)  # bonjour and welcome to Paris!</code></pre> 
-  <h2 style="text-align: center;">"Editing" a string</h2> 
-  <p>Often, when you read a string from somewhere (a file or the input) you need to edit it so that it contains only the information you need. For instance, the input string can have a lot of unnecessary whitespaces or some trailing combinations of characters. The "editing" methods that can help with that are <strong><code class="language-python">strip()</code></strong>, <strong><code class="language-python">rstrip()</code></strong> and <strong><code class="language-python">lstrip()</code></strong>.</p> 
+  <h5 style="text-align: center;" id="removing-characters-from-a-string">Removing characters from a string</h5> 
+  <p>Often, when you read a string from somewhere (a file or the input) you need to edit it so that it contains only the information you need. For instance, the input string can have a lot of unnecessary whitespaces or some trailing combinations of characters. The "editing" methods that can help with that are <strong><code class="language-python">strip()</code></strong>, <strong><code class="language-python">rstrip()</code></strong>, and <strong><code class="language-python">lstrip()</code></strong>.</p> 
   <ul> 
    <li> <p><strong><code class="language-python">str.lstrip([chars])</code></strong> removes the leading characters (i.e. characters from the left side). If the argument <code class="language-python">chars</code> isn’t specified, leading whitespaces are removed.</p> </li> 
    <li> <p><strong><code class="language-python">str.rstrip([chars])</code></strong> removes the trailing characters (i.e. characters from the right side). The default for the argument <code class="language-python">chars</code> is also whitespace.</p> </li> 
@@ -68,7 +70,7 @@ whitespace_string.strip()  # "hey"
 
 # delete all trailing "i" and "s" from both sides
 normal_string.strip("is")  # "ncomprehensibilitie"</code></pre> 
-  <p>Keep in mind that the methods <code class="language-python">strip()</code>, <code class="language-python">lstrip()</code> and <code class="language-python">rstrip()</code> get rid of all possible combinations of specified characters:</p> 
+  <p>Keep in mind that the methods <code class="language-python">strip()</code>, <code class="language-python">lstrip()</code>, and <code class="language-python">rstrip()</code> get rid of all possible combinations of specified characters:</p> 
   <pre><code class="language-python">word = "Mississippi"
 
 # starting from the right side, all "i", "p", and "s" are removed:
@@ -80,12 +82,12 @@ print(word.lstrip("ips"))  # "Mississippi"
 # "M", "i", "p", and "s" are removed from both sides, so nothing is left:
 print(word.strip("Mips"))  # ""</code></pre> 
   <p>Use them carefully, or you may end up with an empty string.</p> 
-  <h2 style="text-align: center;">Conclusions</h2> 
-  <p>Thus, we have considered the main methods for strings. Here is a brief recap:</p> 
+  <h5 style="text-align: center;" id="summary">Summary</h5> 
+  <p>To sum up, we have considered the main methods for strings. Here is a brief recap:</p> 
   <ul> 
-   <li>While working with string, you have to remember that strings are <strong>immutable</strong>, thus all the methods that "change" them only return the copy of a string with necessary changes.</li> 
-   <li>If you want to save the result of the method call for later use, you need to assign this result to a variable (either the same or the one with a different name).</li> 
-   <li>If you want to use this result only once, for example, in comparisons or just to print the formatted string, you are free to use the result on spot, as we did within <code class="language-python">print()</code>.</li> 
+   <li>While working with strings, you have to remember that strings are <strong>immutable</strong>, thus all the methods that "change" them only return the copy of a string with necessary changes.</li> 
+   <li>If you want to save the result of a method call for later use, you need to assign this result to a variable (either the same or the one with a different name).</li> 
+   <li>If you want to use this result only once, for example, in comparisons or just to print the formatted string, you are free to use the result on the spot, as we did within <code class="language-python">print()</code>.</li> 
   </ul>
  </body>
 </html>
