--- a/Python/Tic_Tac_Toe/Topics/Any and all/Theory/task.html
+++ b/Python/Tic_Tac_Toe/Topics/Any and all/Theory/task.html
@@ -1,9 +1,10 @@
+<h2>Any and all</h2>
 <html>
  <head></head>
  <body>
   <p>By now, you certainly know that Python has a lot of different <strong>built-in functions</strong> that help developers work more efficiently. Built-in functions are always available, so you don't need to declare or import them. Just call such a function whenever you need it. You have already seen one of those functions, it is <code class="language-python">print()</code>. Today we will learn two more built-in functions <code class="language-python">any()</code> and <code class="language-python">all()</code> and find out how and when to use them.</p> 
   <p>Be careful though, these functions work only with <strong>iterable </strong>objects, e.g. strings and lists. A list is iterable, so we will use it to illustrate the theoretical part and to show how <code class="language-python">any()</code> and <code class="language-python">all()</code> work.</p> 
-  <h2>Function any()</h2> 
+  <h5>Function any()</h5> 
   <p>The result of the <code class="language-python">any()</code> function call is the boolean value: it returns <code class="language-python">True</code> if an element or a group of elements in an iterable object are evaluated <code class="language-python">True</code>. Otherwise, it returns <code class="language-python">False</code>. Let’s take a look at the example. Imagine that you and your friends, Jam and Andy, wrote a test and got your results in the form of a list with <code class="language-python">True</code> and <code class="language-python">False</code> values. The test is passed if at least one answer is correct. Now you need to check if you and your friends passed that test.</p> 
   <pre><code class="language-python">your_results = [True, False, False]
 print(any(your_results))  # True</code></pre> 
@@ -19,7 +20,7 @@ print(any(andy_results))  # False</code></pre>
 print(any(jam_results))  # False</code></pre> 
   <p>The list doesn't contain any elements, and since no <code class="language-python">True</code> value is to be found the <code class="language-python">any()</code> function returns <code class="language-python">False</code>.</p> 
   <p>So what does the <code class="language-python">any()</code> function do? First, it takes a list as an argument, then evaluates all the elements of this list to find at least one <code class="language-python">True</code>, if so, it returns <code class="language-python">True</code>, otherwise, the result is <code class="language-python">False</code>.</p> 
-  <h2>Function all() </h2> 
+  <h5>Function all() </h5> 
   <p>The <code class="language-python">all()</code> function works pretty much like <code class="language-python">any()</code>. The difference is that <code class="language-python">all()</code> function checks if all the elements of an iterable object are <code class="language-python">True</code> and returns <code class="language-python">True</code> if they are. Otherwise, you get <code class="language-python">False</code>. Do you remember the story from the previous section where we checked the results of the test? Let's proceed. Imagine yet another test, this time the final one. To succeed, you should answer all the questions correctly. How did it go this time for you and the two friends of yours?</p> 
   <pre><code class="language-python">your_results = [True, False, False]
 print(all(your_results))  # False</code></pre> 
@@ -30,7 +31,7 @@ print(all(andy_results))  # True</code></pre>
   <pre><code class="language-python">jam_results = []
 print(all(jam_results))  # True</code></pre> 
   <p>The list doesn't contain any elements, but the <code class="language-python">all()</code> function will return <code class="language-python">True</code> because it searches for any <code class="language-python">False</code> values. No <code class="language-python">False</code> values result in <code class="language-python">True</code>. Be careful with this scenario.</p> 
-  <h2>Non-boolean values</h2> 
+  <h5>Non-boolean values</h5> 
   <p>Pay attention to the fact that <code class="language-python">any()</code> and <code class="language-python">all()</code> can take a list containing non-boolean values. Let's recall how they are evaluated.</p> 
   <p>Empty sequences, e.g. strings and lists, as well as zero, are equivalent to <code class="language-python">False</code>, the same applies to the constant <code class="language-python">None</code>. Non-empty sequences are equivalent to <code class="language-python">True</code>.</p> 
   <p></p>
@@ -62,7 +63,7 @@ boolean_scores = [score &gt;= 3 for score in scores]  # [False, False, True, Tru
 print(any(boolean_scores))  # True
 print(all(boolean_scores))  # False</code></pre> 
   <p>However, lists may contain different elements, e.g. strings or nested lists, in such cases, the behavior of <code class="language-python">any()</code> and <code class="language-python">all()</code> would depend largely on the contents. Keep that in mind.</p> 
-  <h2>Conditions</h2> 
+  <h5>Conditions</h5> 
   <p>Coders often use <code class="language-python">any()</code> and <code class="language-python">all()</code> functions in conditions. It helps to check the elements of iterable objects quickly and to avoid complex constructions.</p> 
   <p>Let's choose a candy box for Valentine's Day. Each box contains several types of sweets. But you are interested in the even amount of candies of each type because, obviously, you will share them with your valentine.</p> 
   <pre><code class="language-python">box = [10, 20, 33]
@@ -72,7 +73,7 @@ if any([candy % 2 for candy in box]):
 else:
     print("Perfect!")</code></pre> 
   <p>Short and sweet, isn't it? Life is like a box of chocolates! As long as the values you deal with can be converted to <code class="language-python">True</code> and <code class="language-python">False</code>, it's safe to use both functions in conditions.</p> 
-  <h2>To sum up</h2> 
+  <h5>Summary</h5> 
   <p>We learned what <code class="language-python">any()</code> and <code class="language-python">all()</code> functions can do and how they work. As you can see, these functions are an efficient tool that helps check conditions and may improve the readability of your code.</p>
  </body>
 </html>
