--- a/Python/Tic_Tac_Toe/Topics/Errors/Theory/task.html
+++ b/Python/Tic_Tac_Toe/Topics/Errors/Theory/task.html
@@ -1,3 +1,4 @@
+<h2>Errors</h2>
 <html>
  <head></head>
  <body>
@@ -11,11 +12,11 @@
 SyntaxError: unexpected EOF while parsing</code></pre> 
   <p><strong>Traceback </strong>is a stack trace that appears when your code causes an error and it reports detailed information on that particular error, indicating the <strong>specific files </strong>in which the error occurred. Nonetheless, the lines that are the most informative for us right now are the last two. They point out the mistake in your code.</p> 
   <p>This might seem a little bit frustrating, but generally what errors are designed for is to allow Python to communicate with you. Whenever you see those red threatening lines – don't panic! Just read carefully what they are saying.</p> 
-  <h2 style="text-align: center;">Syntax errors</h2> 
+  <h5 style="text-align: center;">Syntax errors</h5> 
   <p>In the example above, we can clearly see the magic word <code class="language-python">SyntaxError</code> that is likely to haunt you throughout the period of getting used to Python. A large variety of different errors are referred to as syntax errors. What they usually mean is that Python has encountered a problem while trying to<strong> compile</strong> your program and it can't even execute it.</p> 
-  <p>If you read carefully the text of a traceback, it will help you to find mistakes and correct them quite easily, as you can see an<strong> arrow</strong> pointing to the exact place where Python found the mistake in your code. Every syntax error has an <strong>associated value</strong>.<strong> </strong>It describes an error in detail. In the example, the message <samp>"SyntaxError: unexpected EOF while parsing"</samp> means that something else had been expected after your statement, but you didn't pass it to the interpreter. In our case, there should've been a closing round bracket <samp>")"</samp>.</p> 
+  <p>If you carefully read the text of a traceback, it will help you to find mistakes and correct them quite easily, as you can see an<strong> arrow</strong> pointing to the exact place where Python found the mistake in your code. Every syntax error has an <strong>associated value</strong>.<strong> </strong>It describes an error in detail. In the example, "<samp>EOF</samp>" in the message <samp>"SyntaxError: unexpected EOF while parsing"</samp> stands for the end of a file. This message means that something else had been expected after your statement, but you didn't pass it to the interpreter. In our case, there should've been a closing round bracket <samp>")"</samp>.</p> 
   <p>Mistakes won't be so obvious all the time. It is quite likely that the message you'll get as an associated value will be the most common and obscure <samp>"invalid syntax"</samp>, which isn't really helpful. Well, anyway, to locate the problem it’s enough to know that the error is in the syntax.</p> 
-  <h2 style="text-align: center;">Common errors for beginners</h2> 
+  <h5 style="text-align: center;">Common errors for beginners</h5> 
   <p>Some of the most common syntax errors are:</p> 
   <ul> 
    <li><strong>wrong spelling</strong> of keywords and function names, e.g. <code class="language-python">While</code> instead of <code class="language-python">while</code>, <code class="language-python">pint</code> instead of <code class="language-python">print</code>;</li> 
@@ -36,6 +37,8 @@ SyntaxError: unexpected EOF while parsing</code></pre>
 another_string = this is not a string!"
 parted_string = 'I'd like to be highlighted, but'
           prnit("I am not")</code></pre> 
-  <p>As you can see, there are plenty of syntax errors in this tiny piece of code. If you’ve checked and corrected everything from the list above and yet you encounter those error messages – don’t worry! Once again, it’s just Python trying to tell you that something went wrong. Deep breath, reread the article, and continue perfecting your programming skills!</p>
+  <p>As you can see, there are plenty of syntax errors in this tiny piece of code. If you’ve checked and corrected everything from the list above and yet you encounter those error messages – don’t worry! Once again, it’s just Python trying to tell you that something went wrong. Take a deep breath, reread the article, and continue perfecting your programming skills!</p> 
+  <h5>Summary</h5> 
+  <p>In this topic, we learned what traceback is, look at syntax errors in detail, and went through several common errors you, as a beginner, may encounter.</p>
  </body>
 </html>
