--- a/Python/Tic_Tac_Toe/Topics/For loop/Lucky 7/task.html
+++ b/Python/Tic_Tac_Toe/Topics/For loop/Lucky 7/task.html
@@ -2,18 +2,18 @@
 <html>
  <head></head>
  <body>
-  <p>Read an integer number <strong>n</strong>. This is a number of integer values you will receive on the next <strong>n</strong> lines. Among these numbers find the multiples of 7 (that is, numbers that could be divided by 7 without the remainder) and print their squares. Each square number should be printed on a new line. </p> 
-  <p><button class="btn-sm btn-outline-secondary" onclick="getElementById('hint-334').style.display='inline'"> Hint </button> </p>
-  <div id="hint-334" style="display:none;">
-   You can write 
-   <em>n</em> to some variable and then call 
+  <p>Read the first input, which will give you a number <strong>n</strong>. This is the number of times you need to read input in order to get <strong>n</strong> integer values. For each value find out if it's a multiple of 7 (that is, a number that could be divided by 7 without the remainder) and, if yes, print its square. Each square number should be printed <em>on a new line</em>. </p> 
+  <p><button class="btn-sm btn-outline-secondary" onclick="getElementById('hint-394').style.display='inline'"> Hint </button> </p>
+  <div id="hint-394" style="display:none;">
+   Write 
+   <em>n</em> to some variable and then, using the 
+   <em>for</em> loop, call the 
    <em>input()</em> function exactly 
-   <em>n</em> times using 
-   <em>for</em> loop.
-   <p></p> 
-   <p>You can either output each square immediately after reading the input with the number, or you can calculate all the squares at first and then output them. It doesn't matter which option you choose: the only thing that matters is that you should output <em>m</em> lines with correct squares.</p>
+   <em>n</em> times. Also, remember that the 
+   <em>input()</em> function returns 
+   <em>strings</em> and you need 
+   <em>ints</em>.
   </div>
   <p></p>
  </body>
 </html><br><b>Sample Input:</b><br><pre><code class="language-no-highlight">7<br>8<br>11<br>-49<br>0<br>3564<br>14<br>33</code></pre><br><b>Sample Output:</b><br><pre><code class="language-no-highlight">2401<br>0<br>196</code></pre><br><br><br><font color="gray">Memory limit: 256 MB</font><br><font color="gray">Time limit: 15 seconds</font><br><br>
-<a href="https://hyperskill.org/learn/step/6065">Show topic summary</a>
