--- a/Python/Tic_Tac_Toe/Topics/For loop/Theory/task.html
+++ b/Python/Tic_Tac_Toe/Topics/For loop/Theory/task.html
@@ -1,28 +1,30 @@
+<h2>For loop</h2>
 <html>
  <head></head>
  <body>
-  <h2 style="text-align: center;">What is iteration?</h2> 
-  <p>Computers are known for their ability to do things which people consider to be boring and energy-consuming. For example, repeating identical tasks without any errors is one of these things. In Python, the process of repetitive execution of the same block of code is called an <strong>iteration</strong>.</p> 
+  <p>Computers are known for their ability to do things that people consider to be boring and energy-consuming. For example, repeating identical tasks without any errors is one of these things. In this topic, we'll learn what Python tool can help you with that, how to implement it, and what functions you can use along with it.</p> 
+  <h5 style="text-align: center;" id="what-is-iteration">What is iteration?</h5> 
+  <p>In Python, the process of repetitive execution of the same block of code is called an <strong>iteration</strong>.</p> 
   <p>There are two types of iteration:</p> 
   <p><strong>Definite iteration</strong>, where the number of repetitions is stated in advance.</p> 
-  <p><strong>Indefinite iteration</strong>, where the code block executes as long as the condition stated in advance is true.</p> 
-  <p>After the first iteration, the program comes back to the beginning of the code’s body and repeats it, making the so-called <strong>loop</strong>. The most used one is the <code class="language-python">for</code><strong> loop, </strong>named after the <code class="language-python">for</code><strong> operator</strong> that provides the code’s execution.</p> 
-  <h2 style="text-align: center;">For loop syntax</h2> 
+  <p><strong>Indefinite iteration</strong>, where a code block executes as long as the condition stated in advance is true.</p> 
+  <p>After the first iteration, the program comes back to the beginning of the code’s body and repeats it, making a so-called <strong>loop</strong>. The most widely used one is the <code class="language-python">for</code><strong> loop, </strong>named after the <code class="language-python">for</code><strong> operator</strong>, which provides the code’s execution. For loops are usually considered to be definite. </p> 
+  <h5 style="text-align: center;" id="for-loop-syntax">For loop syntax</h5> 
   <p>Here is the scheme of the loop:</p> 
   <pre><code class="language-python">for variable in iterable:
     statement</code></pre> 
-  <p>where <strong>statement</strong> is a block of operations executed for each item in<strong> iterable, </strong>an object used in iteration (e.g. string or list). Variable takes the value of the next iterable after each iteration.</p> 
-  <p>Now try to guess which output we'll get if we execute the following piece of code:</p> 
+  <p>where <code class="language-python">statement</code> is a block of operations executed for each item in<strong> </strong><code class="language-python">iterable</code><strong>, </strong>an object used in iteration (e.g., a string or a list). <code class="language-python">Variable</code> takes the value of the next iterable after each iteration.</p> 
+  <p>Now try to guess what output we'll get if we execute the following piece of code:</p> 
   <pre><code class="language-python">oceans = ['Atlantic', 'Pacific', 'Indian', 'Southern', 'Arctic']
 for ocean in oceans:
     print(ocean)</code></pre> 
-  <p>During each iteration the program will take the items from the list and execute the statements with them, so the output will be:</p> 
+  <p>During each iteration, the program will take the items from the list and execute the statements with them, so the output will be:</p> 
   <pre><code class="language-python">Atlantic
 Pacific
 Indian
 Southern
 Arctic</code></pre> 
-  <p>Even strings are iterable, so you can spell the word, for example:</p> 
+  <p>Strings are also iterable, so you can spell a word, for example:</p> 
   <pre><code class="language-python">for char in 'magic':
     print(char)</code></pre> 
   <p> Like this:</p> 
@@ -31,8 +33,8 @@ a
 g
 i
 c</code></pre> 
-  <h2 style="text-align: center;">Range function</h2> 
-  <p>The <code class="language-python">range()</code><strong> function</strong> is used to specify the number of iterations. It returns a sequence of numbers from 0 (by default) and ends at a specified number. Be careful: the last number won’t be in the output.</p> 
+  <h5 style="text-align: center;" id="range-function">Range function</h5> 
+  <p>The <code class="language-python">range()</code><strong> function</strong> is used to specify the number of iterations. It returns a sequence of numbers from 0 (by default) and ends at a specified number. Be careful: the last number won’t be in the output since we started from 0.</p> 
   <p>Let's look at the example below:</p> 
   <pre><code class="language-python">for i in range(5):
     print(i)</code></pre> 
@@ -50,12 +52,12 @@ c</code></pre>
 15
 25
 35</code></pre> 
-  <p>If you're not going to use the counter variable in your loop, you can show it by replacing its name with an underscore symbol:</p> 
+  <p>If you're not going to use the counter variable in your loop, you can show it by replacing its name with the underscore symbol:</p> 
   <pre><code class="language-python">for _ in range(100):
     do_smth()</code></pre> 
-  <p>In the example above, we don't need the counter variable in any way, we simply use the loop to repeat <code class="language-python">do_smth()</code> function a given amount of times. </p> 
-  <h2 style="text-align: center;">Input data processing </h2> 
-  <p>You can also use the <code class="language-python">input()</code><strong> function </strong>that helps a user to pass a value to some variable and work with it. Thus, you can get the same output as with the previous piece of code:</p> 
+  <p>In the example above, we don't need the counter variable in any way, we simply use the loop to repeat the <code class="language-python">do_smth()</code> function a given number of times. </p> 
+  <h5 style="text-align: center;" id="input-data-processing">Input data processing </h5> 
+  <p>You can also use the <code class="language-python">input()</code><strong> function, </strong>which helps the user to pass a value to some variable and work with it. Thus, you can get the same output as with the previous piece of code:</p> 
   <pre><code class="language-python">word = input()
 for char in word:
     print(char)</code></pre> 
@@ -63,9 +65,9 @@ for char in word:
   <pre><code class="language-python">times = int(input('How many times should I say "Hello"?'))
 for i in range(times):
     print('Hello!')</code></pre> 
-  <p>You can, therefore, ask a user to specify the number of iterations to be performed.</p> 
-  <h2 style="text-align: center;">Nested loop</h2> 
-  <p>In Python, it is easy to put one loop inside another one – a <strong>nested loop</strong>. The type of inner and outer loops doesn't matter, the first to execute is the outer loop, then the inner one executes:</p> 
+  <p>You can, therefore, ask the user to specify the number of iterations to be performed.</p> 
+  <h5 style="text-align: center;" id="nested-loop">Nested loop</h5> 
+  <p>In Python, it is easy to put one loop inside another one – a <strong>nested loop</strong>. The type of the inner and outer loops doesn't matter, the first to execute is the outer loop, then the inner one executes:</p> 
   <pre><code class="language-python">names = ['Rose', 'Daniel']
 surnames = ['Miller']
 for name in names:
@@ -74,8 +76,8 @@ for name in names:
   <p>The output is shown below: </p> 
   <pre><code class="language-python">Rose Miller
 Daniel Miller</code></pre> 
-  <p>In this example, we use the two <code class="language-python">for</code> loops to create fictional people's names. Obviously, you can deal with iterable objects of different sizes without too much fuss.</p> 
-  <h2 style="text-align: center;">To sum up</h2> 
-  <p>All in all, <code class="language-python">for</code> loops are an efficient way to automatize some repetitive actions. You can add variables and operations to make a nested loop. Moreover, you can control the number of iterations with the help of the <code class="language-python">range()</code> function. Be careful with the syntax: an extra indent or lack of colon can cause a mistake!</p>
+  <p>Check out <a target="_blank" href="https://pythontutor.com/visualize.html#code=names%20%3D%20%5B'Rose',%20'Daniel'%5D%0Asurnames%20%3D%20%5B'Miller'%5D%0Afor%20name%20in%20names%3A%0A%20%20%20%20for%20surname%20in%20surnames%3A%0A%20%20%20%20%20%20%20%20%20print%28name,%20surname%29&amp;cumulative=false&amp;curInstr=0&amp;heapPrimitives=nevernest&amp;mode=display&amp;origin=opt-frontend.js&amp;py=3&amp;rawInputLstJSON=%5B%5D&amp;textReferences=false" rel="noopener noreferrer nofollow">this</a> visualization for a better understanding of how the code works, click <code class="language-python">Next&gt;</code> and follow the arrows. In this example, we use two <code class="language-python">for</code> loops to create fictional people's names. Obviously, you can deal with iterable objects of different sizes without too much fuss.</p> 
+  <h5 style="text-align: center;" id="summary">Summary</h5> 
+  <p>All in all, <code class="language-python">for</code> loops are an efficient way to automate some repetitive actions. You can add variables and operations to make a nested loop. Moreover, you can control the number of iterations with the help of the <code class="language-python">range()</code> function. Be careful with the syntax: an extra indent or the lack of a colon can cause a mistake!</p>
  </body>
 </html>
