--- a/Python/Tic_Tac_Toe/Topics/Methods/Theory/task.html
+++ b/Python/Tic_Tac_Toe/Topics/Methods/Theory/task.html
@@ -1,8 +1,9 @@
+<h2>Methods</h2>
 <html>
  <head></head>
  <body>
   <p>If attributes define the data that the objects of a particular class have, the <strong>methods</strong> define their behavior. Python has several types of methods that you can create within a class but, in this topic, we will focus on the instance methods. </p> 
-  <h2 style="text-align: center;">Method syntax</h2> 
+  <h5 style="text-align: center;">Method syntax</h5> 
   <p>Methods define the functionality of the objects that belong to the particular class. The basic syntax looks like this:</p> 
   <pre><code class="language-python"># basic method syntax
 class MyClass:
@@ -13,7 +14,7 @@ class MyClass:
     # custom method
     def do_smt(self):
         # does something</code></pre> 
-  <p>You can see that declaring a method resembles declaring a function: we have keyword <strong><code class="language-python">def</code></strong> followed by the name of the method. The parameters of the method are written inside the parentheses. </p> 
+  <p>You can see that declaring a method resembles declaring a function: we have the keyword <strong><code class="language-python">def</code></strong> followed by the name of the method. The parameters of the method are written inside the parentheses. </p> 
   <p>The first parameter of the method should always be <strong><code class="language-python">self</code></strong>. You may remember that <code class="language-python">self</code> represents the particular instance of the class. When it comes to instance methods, the first parameter that is passed to the method is the instance that called it. Let's create an instance of <strong>MyClass </strong>and see how this works:</p> 
   <pre><code class="language-python">my_object = MyClass(some_value)
 # calling the instance method
@@ -23,7 +24,7 @@ my_object.do_smt()
   <pre><code class="language-python">MyClass.do_smt(my_object)
 # my_object does the same thing</code></pre> 
   <p>These examples clearly illustrate why <code class="language-python">self</code> has to be the first argument of the instance methods. If you want your method to have other parameters, just write them after the <code class="language-python">self</code> keyword!</p> 
-  <h2 style="text-align: center;">Methods vs functions</h2> 
+  <h5 style="text-align: center;">Methods vs functions</h5> 
   <p>Though they are quite similar, Python does make a distinction between methods and functions. To quote the official documentation, <em>"a method is a function that 'belongs to' an object." </em>Since we're interested in OOP, we'll specifically be looking at methods associated with class instances.</p> 
   <p>Let's consider an example:</p> 
   <pre><code class="language-python"># class and its methods
@@ -52,7 +53,7 @@ black_pearl.sail()
 sail_function(black_pearl.name)
 # also prints "Black Pearl has sailed!"</code></pre> 
   <p>The way that we've defined them, both our method and our function produce the same results but in a different way. A method is connected to an object of the class, it is not independent the way a function is. Sure they are both called by their names, but to call a method we need to invoke the class that this method belongs to. </p> 
-  <h2 style="text-align: center;">Return</h2> 
+  <h5 style="text-align: center;">Return</h5> 
   <p>So far the method hasn't returned any values since we only used the <code class="language-python">print()</code> function. Obviously, just as with functions, we can define what type of data the method can return with the <code class="language-python">return</code> statement. For example, let's create a method that calculates how many kilograms of cargo the ship has (initially, the weight of the cargo is given in tons):</p> 
   <pre><code class="language-python">class Ship:
     # other methods
@@ -62,8 +63,8 @@ sail_function(black_pearl.name)
   <p>The method is simple: it converts the tons into kilograms (by multiplying it by 1000) and then returns the calculated value. If we were to call it, we wouldn't get any messages unless we explicitly printed the result of the function:</p> 
   <pre><code class="language-python">print(black_pearl.convert_cargo())  # 0</code></pre> 
   <p>Since we haven't changed the default value of the <code class="language-python">cargo</code> attribute, the method would return 0 multiplied by 1000, which is also 0.</p> 
-  <h2 style="text-align: center;">Summary</h2> 
-  <p><strong>Methods</strong> within classes specify the behavior of class or its objects. They are similar to functions with the exception that they are strongly connected to the class and cannot be called independently from it or its instances. </p> 
+  <h5 style="text-align: center;">Summary</h5> 
+  <p><strong>Methods</strong> within classes specify the behavior of a class or its objects. They are similar to functions with the exception that they are strongly connected to the class and cannot be called independently from it or its instances. </p> 
   <p>The first parameter of instance methods is the keyword <strong><code class="language-python">self</code> </strong>that represents the particular instance of the class. That particular instance of the class is the first argument that is passed to the method. Methods can return values or simply print messages (i.e. return nothing).</p> 
   <p>Methods allow you to add any functionality to your classes. This is how you can manipulate your objects and create complex programs, so we encourage you to explore methods in your projects!</p>
  </body>
