--- a/Python/Tic_Tac_Toe/Topics/Split and join/What day is it/task.html
+++ b/Python/Tic_Tac_Toe/Topics/Split and join/What day is it/task.html
@@ -2,7 +2,6 @@
 <html>
  <head></head>
  <body>
-  <p>Read a date from the input given in the following format: <code class="java">YYYY-MM-DD</code>. Print the year, month and day on separate lines.</p>
+  <p>Read a date from the input given in one of the following formats: <code class="java">YYYY-MM-DD</code> or <code class="java">YYY-MM-DD</code>. Print the year, month and day on separate lines.</p>
  </body>
 </html><br><b>Sample Input:</b><br><pre><code class="language-no-highlight">2020-04-30</code></pre><br><b>Sample Output:</b><br><pre><code class="language-no-highlight">2020<br>04<br>30</code></pre><br><br><br><font color="gray">Memory limit: 256 MB</font><br><font color="gray">Time limit: 15 seconds</font><br><br>
-<a href="https://hyperskill.org/learn/step/6972">Show topic summary</a>
